--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">设置</string>
 
+    <string name="not_login_tip_1">您尚未进行登陆</string>
+    <string name="not_login_tip_2">点击头像进行登陆/注册</string>
+
 </resources>
