--- a/dialogs/src/main/res/values/strings.xml
+++ b/dialogs/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="dialog_style_1_loading_now">正在搜索中，请耐心等待 也可能网络不稳定，导致加载时间过长</string>
     <string name="dialog_style_2_result_not_found">可能照片模糊，角都不当，或题型暂不支持\n目前初高中理科效果最佳</string>
     <string name="dialog_style_3_net_out_of_time">可能网络连接有问题\n请确认网络连接是否正常</string>
+    <string name="dialog_about_content">1.该应用为zhuo的毕业设计，为影视类APP\n2.该应用仅供学习交流使用\n3.在应用中使用到了来源与网络的图片，如有侵权，可联系作者740212253@qq.com，会立刻进行删除</string>
 </resources>
